--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <style>body {</style>
+    <style>body{background-image:url(Fundo\ Final.jpg);
+    background-position:bottom;
+    background-repeat: no-repeat;
+    background-size: unset;</style>
     <title>Prado Vision Servics</title>
+    
 
-    <style>body{background-color: rgb(189, 213, 236);</style>
+    <style>body{background-color: rgb(231, 240, 248);</style>
     <h1>Prado Vision Servics<p>Olá, sou Dário Prado!</p> <p>Desenvolvedor WEB e Programador</ em Javascrip,PHP e Python</p> </h1>
  <h2> Missão:</h2>
-<p>Minha missão como desenvolvedor web e programador é oferecer soluções digitais eficientes, seguras e visualmente atrativas, e com uma visão alinhada às necessidades do cliente. Comprometo-me com a excelência, inovação contínua e ética profissional, contribuindo para o crescimento sustentável dos projetos que desenvlovo. </p>
+<p>Minha missão como desenvolvedor web e programador é oferecer soluções digitais eficientes, seguras e visualmente atrativas, e com uma visão alinhada às necessidades do cliente. Comprometo-me com a excelência, inovação contínua e ética profissional, contribuindo para o crescimento sustentável dos projetos que desenvolvo. </p>
 <h2> ✅ Principais Serviços:</h2>
 <p> 
  <b> 1.Criação de páginas web estáticas</b>
@@ -36,4 +40,4 @@
 <p>-Ajustes e correções em sites existentes</p>
 <p> <b> 6. Sites para pequenos negócios locais</b>
    <p>Salões de beleza, eletricistas, taxistas, lojas de bairro, igrejas, etc.</p>  </p>
-   <h3>Contactos:</h3><p> Whatsap: +244 941 749 914</p><p>Email: darioprizman@gmail.com</p>
+   <h3>Contactos:</h3><p><a href="https://wa.me/244941749914" target="_blank"><link rel="stylesheet" href=""><style></style>Contacte me pelo WhatsApp link</a></p><p>Email: darioprizman@gmail.com</p>
